--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,11 @@
       <version>4.1.3.RELEASE</version>
       <scope>test</scope>
     </dependency>
-
+    <dependency>
+      <groupId>com.jayway.jsonpath</groupId>
+      <artifactId>json-path</artifactId>
+      <scope>test</scope>
+    </dependency>
 
   </dependencies>
   <build>
