added: checks form data   OK, but not negative TEST

--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,12 @@
       <artifactId>commons-io</artifactId>
       <version>1.4</version>
     </dependency>
-
+    <!--<dependency>-->
+      <!--<groupId>javax.el</groupId>-->
+      <!--<artifactId>javax.el-api</artifactId>-->
+      <!--<version>3.0.0</version>-->
+      <!--<scope>test</scope>-->
+    <!--</dependency>-->
   </dependencies>
   <build>
     <finalName>v_1</finalName>
